<?xml version="1.0"?>
<package format="2">
  <name>unitree_legged_real</name>
  <version>0.0.0</version>
  <description>The unitree_legged_real package</description>

  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>unitree_legged_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>

</package>